src/test/resources/semantic/sentences/correct/TC_RETURN_METHOD.ru
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->B{
        ret nil;
    }
}

struct B{

}

impl B{
    .(){}
}
start{
}
