src/test/resources/semantic/sentences/error/TC_ERROR_RETURN_METHOD5.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 12 | COLUMNA 9 | Se esperaba una variable de tipo B y se encontro una de tipo Bool. |
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->B{
        ret false;;
    }
}

struct B{

}

impl B{
    .(){}
}

struct C{

}

impl C{
    .(){}
}
start{
}
